# mipt-aslab-cpp-04-linmath-01-hwmx

.github/workflows/: workflow.yaml
04-linmath/01-hwmx/: CMakeLists.txt  README.md
04-linmath/01-hwmx/lib/: CMakeLists.txt
04-linmath/01-hwmx/lib/include/: algorithm.hpp  contiguous_matrix.hpp  equal.hpp  matrix.hpp  utility.hpp  vector.hpp
04-linmath/01-hwmx/lib/test/: test_contiguous_matrix.cc  test_matrix.cc  test_vector.cc
04-linmath/01-hwmx/test/: CMakeLists.txt
04-linmath/01-hwmx/test/determinant/: CMakeLists.txt  config.json  test.sh
04-linmath/01-hwmx/test/determinant/resources/: medium0.dat.ans  medium2.dat.ans  medium3.dat.ans
04-linmath/01-hwmx/test/determinant/src/: determinant.cc  roughly_compare.cc
lib/include/: equal.hpp  matrix.hpp
lib/test/: test_matrix.cc  test_vector.cc
test/determinant/: CMakeLists.txt  test.sh
test/determinant/src/: determinant.cc  roughly_compare.cc
